<resources>
    <string name="app_name">Hotel Booking</string>

    <!-- Page de connexion -->
    <string name="login_subtitle_app">Hôtel réservé en un clic</string>
    <string name="register_subtitle_app">Création de votre compte</string>
    <string name="login_email">Adresse mail</string>
    <string name="login_password">Mot de passe</string>
    <string name="nomPrenom">Nom et prenom</string>
    <string name="login_button_enter_app">Entrer</string>
    <string name="register_button_enter_app">Enregistrer</string>
    <string name="login_create_account">Pas de compte ? Créer</string>
    <string name="Register_login_account"> Identifiez-vous</string>

    <!-- Page de recherche d'hotel -->
    <string name="search_title">Chercher un hotel</string>
    <string name="search_subtitle">Trouver la chambre qui vous convient</string>
    <string name="search_destination">Destination</string>
    <string name="search_arrive">Arrivé</string>
    <string name="search_depart">Départ</string>
    <string name="search_nb_personne">Personne(s)</string>
    <string name="search_type_chambre">Type de chambre</string>
    <string name="search_button">Chercher</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    
    <!--Test -->
    <string-array name="test_spinner">
        <item>Barcelone</item>
        <item>Paris</item>
        <item>New York</item>
        <item>Tokyo</item>
    </string-array>

    <!--Test -->
    <string-array name="test_spinner_type_chambre">
        <item>Type chambre 1</item>
        <item>Type chambre 2</item>
        <item>Type chambre 3</item>
        <item>Type chambre 4</item>
    </string-array>


    <!-- Liste hotel exemple -->
    <string name="nom_hotel">Hotel Arts Barcelona</string>
    <string name="petite_description_hotel">Hotel de luxe élégant et moderne</string>
    <string name="liste_tarif_name_hotel">Tarif pour une nuit :</string>
    <string name="liste_tarif_par_nuit_hotel">150€</string>


</resources>