<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titreApplication"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="64dp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titreAccroche"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:text="@string/login_subtitle_app"
        app:layout_constraintEnd_toEndOf="@+id/titreApplication"
        app:layout_constraintStart_toStartOf="@+id/titreApplication"
        app:layout_constraintTop_toBottomOf="@+id/titreApplication" />

    <EditText
        android:id="@+id/editEmail"
        style="@style/TextStyle"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/custom_box_login"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="16dp"
        android:hint="@string/login_email"
        android:paddingLeft="20dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/titreAccroche" />

    <EditText
        android:id="@+id/editPassword"
        style="@style/TextStyle"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_box_login"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="16dp"
        android:hint="@string/login_password"
        app:passwordToggleEnabled="true"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/editEmail"
        app:layout_constraintStart_toStartOf="@+id/editEmail"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <Button
        android:id="@+id/editEntrer"
        style="@style/TextStyle"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:text="@string/register_button_enter_app"
        android:background="@drawable/custom_box_login"
        app:layout_constraintEnd_toEndOf="@+id/editPassword"
        app:layout_constraintStart_toStartOf="@+id/editPassword"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />


    <TextView
        android:id="@+id/textView4"
        style="@style/CreateAccoutTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="64dp"
        android:text="@string/Register_login_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>