<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_list_hotel"
        android:layout_width="180dp"
        android:layout_height="200dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageHotelPresentation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/b" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/nomHotel"
        style="@style/TextStyleNameHotel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:textAlignment="center"
        android:text="@string/nom_hotel"
        app:layout_constraintStart_toEndOf="@+id/card_view_list_hotel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/petiteDescriptionHotel"
        style="@style/TextStyleHotelPresentation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:text="@string/petite_description_hotel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card_view_list_hotel"
        app:layout_constraintTop_toBottomOf="@+id/nomHotel" />

    <TextView
        android:id="@+id/tarifParNuit"
        style="@style/TextStyleTarif"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/liste_tarif_par_nuit_hotel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/nomTarifParNuit"
        style="@style/TextStyleHotelPresentation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/liste_tarif_name_hotel"
        app:layout_constraintBottom_toTopOf="@+id/tarifParNuit"
        app:layout_constraintStart_toEndOf="@+id/card_view_list_hotel" />



</androidx.constraintlayout.widget.ConstraintLayout>